<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cavetale.enderball</groupId>
  <artifactId>enderball</artifactId>
  <version>0.1-SNAPSHOT</version>

  <name>Enderball</name>
  <url>https://github.com/StarTux/Enderball</url>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <finalName>${project.name}</finalName>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:unchecked</arg>
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>
  <repositories>

    <!-- Paper Repo -->
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>

    <!-- Cavetale Repo -->
    <repository>
      <id>cavetale</id>
      <url>https://cavetale.com/jenkins/plugin/repository/everything/</url>
    </repository>

  </repositories>
  <dependencies>

    <!-- Paper API -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.21.8-R0.1-SNAPSHOT</version> <!-- Paper Version -->
      <scope>provided</scope>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.32</version>
      <scope>provided</scope>
    </dependency>

    <!-- Core -->
    <dependency>
      <groupId>com.cavetale.core</groupId>
      <artifactId>core</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Mytems -->
    <dependency>
      <groupId>com.cavetale.mytems</groupId>
      <artifactId>mytems</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Fam -->
    <dependency>
      <groupId>com.cavetale.fam</groupId>
      <artifactId>fam</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Title -->
    <dependency>
      <groupId>com.winthier.title</groupId>
      <artifactId>title</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Creative -->
    <dependency>
      <groupId>com.winthier.creative</groupId>
      <artifactId>creative</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Area -->
    <dependency>
      <groupId>com.cavetale.area</groupId>
      <artifactId>area</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Afk -->
    <dependency>
      <groupId>com.cavetale.afk</groupId>
      <artifactId>afk</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>
</project>
